code cleaning-up